[gd_scene load_steps=16 format=3 uid="uid://bjvnm0aydr0vd"]

[ext_resource type="Script" uid="uid://byqf6bdnsd3m8" path="res://Scripts/Inimigos/Morcego.gd" id="1_j5mvf"]
[ext_resource type="Texture2D" uid="uid://bicsa1wljjplt" path="res://Sprites/Inimigos/Morcego/iminigo_voador_FRAME01.png" id="2_87fsy"]
[ext_resource type="Texture2D" uid="uid://cjslyc2lwn221" path="res://Sprites/Inimigos/Morcego/iminigo_voador_FRAME02.png" id="3_j5mvf"]
[ext_resource type="Texture2D" uid="uid://cqpj18rvwia1g" path="res://Sprites/Inimigos/Morcego/iminigo_voador_FRAME03.png" id="4_63e5l"]
[ext_resource type="Texture2D" uid="uid://dihnt3vmwd3dp" path="res://Sprites/Inimigos/Morcego/iminigo_voador_FRAME04.png" id="5_5qklw"]
[ext_resource type="PackedScene" uid="uid://va5pjd6vuuo2" path="res://Objetos/Funcionalidade/CompHurtBox.tscn" id="5_87fsy"]
[ext_resource type="Script" uid="uid://hsdutxxttrp3" path="res://Scripts/Componentes/Vida.gd" id="5_ohlaa"]
[ext_resource type="AudioStream" uid="uid://b3mmkipqf30jd" path="res://Audio/SFX/INIMIGOS/HIT_INIMIGO.wav" id="6_87fsy"]
[ext_resource type="PackedScene" uid="uid://pc4mgv2nv8af" path="res://Objetos/Funcionalidade/CompHitBox.tscn" id="7_khkaq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_63e5l"]
radius = 139.38911

[sub_resource type="SpriteFrames" id="SpriteFrames_tkh53"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_87fsy")
}, {
"duration": 1.0,
"texture": ExtResource("3_j5mvf")
}, {
"duration": 1.0,
"texture": ExtResource("4_63e5l")
}, {
"duration": 1.0,
"texture": ExtResource("5_5qklw")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_j5mvf"]
radius = 664.782

[sub_resource type="CircleShape2D" id="CircleShape2D_87fsy"]
radius = 136.6731

[sub_resource type="Resource" id="Resource_87fsy"]
metadata/__load_path__ = "res://Audio/SFX/INIMIGOS/HIT_INIMIGO.wav"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ujy2f"]
radius = 120.196754
height = 240.39351

[node name="Morcego" type="CharacterBody2D"]
scale = Vector2(0.88, 0.88)
collision_layer = 2
motion_mode = 1
safe_margin = 2.0
script = ExtResource("1_j5mvf")
speed = 1.2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.22733307, 0.2273407)
scale = Vector2(0.6818189, 0.6818189)
shape = SubResource("CircleShape2D_63e5l")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1.0542756, 1.6806661, 1.5060982, 1)
position = Vector2(-4.3181305, 0.22733307)
scale = Vector2(0.3648795, 0.3648795)
sprite_frames = SubResource("SpriteFrames_tkh53")
autoplay = "default"
frame_progress = 0.28055105
speed_scale = 1.2

[node name="Vida" type="Node" parent="."]
script = ExtResource("5_ohlaa")
vida_max = 2
metadata/_custom_type_script = "uid://hsdutxxttrp3"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_j5mvf")

[node name="HurtBox" parent="." node_paths=PackedStringArray("comp_vida", "parent") instance=ExtResource("5_87fsy")]
unique_name_in_owner = true
position = Vector2(0.22733307, 28.636433)
scale = Vector2(0.6818189, 0.6818189)
collision_layer = 8
comp_vida = NodePath("../Vida")
distancia_knockback = 0.3
tempo_knockback = 0.2
hit_sfx = ExtResource("6_87fsy")
parent = NodePath("..")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -42)
rotation = -1.57079
shape = SubResource("CircleShape2D_87fsy")
debug_color = Color(0.99999, 0, 0.0935918, 0.42)

[node name="HitBox" parent="." node_paths=PackedStringArray("ignore") instance=ExtResource("7_khkaq")]
position = Vector2(0.22733307, 27.500069)
scale = Vector2(0.6818189, 0.6818189)
ignore = NodePath("../HurtBox")
sfx = SubResource("Resource_87fsy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1.136364, -42.045456)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_ujy2f")
debug_color = Color(0.807155, 0.414602, 3.85046e-07, 0.42)

[node name="SpawnMoeda" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(2.2727273, -18.181818)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="TimerDano" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerDano" to="." method="_on_timer_dano_timeout"]
